@@ -27,7 +27,7 @@ $max_dict_key = array
 	'0.17.7' => 1326,
 	'0.17.8' => 1334,
 	'0.17.9' => 1334,
-	'0.17.10' => 1334,
+	'0.17.10' => 1346,
 );
 
 define ('TAGNAME_REGEXP', '^[[:alnum:]]([\. _~-]?[[:alnum:]])*$');
